finally decided to just do away with the authorizer (now just trying a simple middleware... we shall see)
